Falta fotos /perguntas/respostas

--- a/Layouts/Intro2.xml
+++ b/Layouts/Intro2.xml
@@ -54,6 +54,10 @@
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <instance-variables>
+                        <originalWidth>0</originalWidth>
+                        <originalHeight>0</originalHeight>
+                    </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="LiteTween">
                             <properties>
