--- a/Layouts/Pergunta6.uistate.xml
+++ b/Layouts/Pergunta6.uistate.xml
@@ -5,10 +5,10 @@ It is entirely optional and the project will load without it.  If you are placin
 you probably do not want to add any .uistate.xml files to the repository.-->
     <camera>
         <position-x>640</position-x>
-        <position-y>379.1</position-y>
-        <position-z>121</position-z>
+        <position-y>341.288</position-y>
+        <position-z>214.359</position-z>
         <lookat-x>640</lookat-x>
-        <lookat-y>379.1</lookat-y>
+        <lookat-y>341.288</lookat-y>
         <lookat-z>0</lookat-z>
     </camera>
     <snap-to-grid>0</snap-to-grid>
@@ -23,8 +23,9 @@ you probably do not want to add any .uistate.xml files to the repository.-->
         <property expanded="0" name="Margins" />
         <property expanded="1" name="Effects" />
     </properties>
-    <active-layer name="Ajudas" />
+    <active-layer name="Rolezin" />
     <layers>
+        <layer locked="1" name="Rolezin" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="FundoPergunta" parallax-in-editor="0" visible="1" />
         <layer locked="0" name="Layer 1" parallax-in-editor="0" visible="1" />
         <layer locked="1" name="Respostas" parallax-in-editor="0" visible="1" />
